--- a/TOC/oricon/index.html
+++ b/TOC/oricon/index.html
@@ -116,7 +116,7 @@
 
 </span>
 
-<h1 id="ongoing" style="padding-top:30px">Ongoing series (will be added periodically)</h1>
+<h2 id="ongoing" style="padding-top:30px">Ongoing series </h2>
 <strong id="op" style="padding-top:50px">One Piece</strong>
 <p></p>
 <span>
@@ -166,7 +166,7 @@
 <br>|*231555(0)|1386360|1604070|1710034|1776868┃2,039,350(168)┃2019/03/04|One&nbsp;Piece&nbsp;92
 <br>|1378177(4)|1716100|1855702|1923919|1966556┃2,094,389(*67)┃2019/07/04|One&nbsp;Piece&nbsp;93
 </span>
-		  <p></p>
+		  <p style="border-bottom: 1px solid black;"></p>
 <strong id="hxh" style="padding-top:50px">Hunter x Hunter</strong>
 <p></p>
 <span>
@@ -184,7 +184,7 @@
 <br>|*477485(3)|*728167|*819134|*865164|*895639┃1,090,958(290)┃2018/02/02|Hunter&nbsp;x&nbsp;Hunter&nbsp;35
 <br>|*498226(4)|*709028|*793638|*838642|*863207┃*,984,493(228)┃2018/10/04|Hunter&nbsp;x&nbsp;Hunter&nbsp;36
 </span>	
-		  <p></p>
+		  <p style="border-bottom: 1px solid black;"></p>
 <strong id="hq" style="padding-top:50px">Haikyuu&#33;&#33;</strong>
 <p></p>
 <span>
@@ -235,7 +235,7 @@
 <br>|*20264(3)|------|------|------|------┃*,*20,264(**3)┃2017/08/04|Haikyuu&#33;&#33;&nbsp;27&nbsp;LE
 <br>|*77828(2)|121727|------|------|------┃*,121,727(**9)┃2015/10/03|Haikyuu&#33;&#33;&nbsp;Complete&nbsp;Guide
 </span>
-		  <p></p>
+		 <p style="border-bottom: 1px solid black;"></p>
 <strong id="mha" style="padding-top:50px">My Hero Academia</strong>
 <p></p>
 <span>
@@ -270,7 +270,7 @@
 <br>|******(3)|------|------|------|------┃*,***,***(***3)┃2017/06/02|My&nbsp;Hero&nbsp;Academia&nbsp;14&nbsp;LE&nbsp;&lt;12,243
 <br>|*34637(7)|------|------|------|------┃*,*34,637(***7)┃2016/05/02|My&nbsp;Hero&nbsp;Academia&nbsp;Official&nbsp;Character&nbsp;Book:&nbsp;Ultra&nbsp;Archive
 </span>	
-		  <p></p>
+		 <p style="border-bottom: 1px solid black;"></p>
 <strong id="bc" style="padding-top:50px">Black Clover</strong>
 <p></p>
 <span>
@@ -300,7 +300,7 @@
 <br>|******(6)|------|------|------|------┃*,***,***(**6)┃2017/05/02|Black&nbsp;Clover&nbsp;11&nbsp;LE&nbsp;&lt;15,808
 <br>|*21239(5)|------|------|------|------┃*,*21,239(**5)┃2018/05/02|Black&nbsp;Clover&nbsp;16.5&nbsp;Official&nbsp;Guidebook&nbsp;Marque-page&nbsp;de&nbsp;Grimoire&nbsp;
 </span>		  		  
-		  <p></p>
+ <p style="border-bottom: 1px solid black;"></p>
 <strong id="yuuna" style="padding-top:50px">Yuragi-sou no Yuuna-san</strong>
 <p></p>
 <span>
@@ -327,7 +327,7 @@
 <br>|******(4)|------|------|------|------┃*,***,***(**4)┃2018/10/04|Yuuna&nbsp;and&nbsp;the&nbsp;Haunted&nbsp;Hotsprings&nbsp;12&nbsp;LE&nbsp;&lt;11,701
 <br>|******(6)|------|------|------|------┃*,***,***(**6)┃2018/12/04|Yuuna&nbsp;and&nbsp;the&nbsp;Haunted&nbsp;Hotsprings&nbsp;13&nbsp;LE&nbsp;&lt;17,070
 </span>		
-		  <p></p>
+		  <p style="border-bottom: 1px solid black;"></p>
 <strong id="kny" style="padding-top:50px">Kimetsu no Yaiba</strong>
 <p></p>
 <span>
@@ -352,7 +352,7 @@
 <br>|*51963(4)|******|******|******|119215┃*,222,175(**74)┃2019/07/05|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;Official&nbsp;Fanbook&nbsp;Demon&nbsp;Corps&nbsp;Records
 
 </span>	
-		  <p></p>
+		   <p style="border-bottom: 1px solid black;"></p>
 <strong id="tpn" style="padding-top:50px">The Promised Neverland</strong>
 <p></p>
 <span>
@@ -375,7 +375,7 @@
 <br>
 <br>|*62333(7)|*73501|******|*89326|------┃*,114,139(*77)┃2019/03/04|The&nbsp;Promised&nbsp;Neverland&nbsp;13&nbsp;LE
 </span>	
-		  <p></p>
+		 <p style="border-bottom: 1px solid black;"></p>
 <strong id="wnl" style="padding-top:50px">We Never Learn</strong>
 <p></p>
 <span>
@@ -394,7 +394,7 @@
 <br>|*76366(6)|*99474|110940|117998|------┃*,117,998(*27)┃2019/06/04|We&nbsp;Never&nbsp;Learn&nbsp;12
 <br>|*70467(5)|*93975|------|------|------┃*,*93,975(*12)┃2019/09/04|We&nbsp;Never&nbsp;Learn&nbsp;13
 </span>	
-		  <p></p>
+		  <p style="border-bottom: 1px solid black;"></p>
 <strong id="ds" style="padding-top:50px">Dr.Stone</strong>
 <p></p>
 <span>
@@ -412,7 +412,7 @@
 <br>|*56414(4)|*81274|*92654|******|106828┃*,106,828(*32)┃2019/07/04|Dr&#46;Stone&nbsp;11
 <br>|*68740(5)|*93266|------|------|------┃*,*93,266(*12)┃2019/09/04|Dr&#46;Stone&nbsp;12
 </span>	
-		  <p></p>
+		 <p style="border-bottom: 1px solid black;"></p>
 <strong id="aa" style="padding-top:50px">Act-Age</strong>
 <p></p>
 <span>
@@ -426,7 +426,7 @@
 <br>|*61834(4)|*89891|102933|******|117666┃*,117,666(*32)┃2019/07/04|Act&#8211;Age&nbsp;7
 <br>|*66245(5)|*92650|------|------|------┃*,*92,650(*12)┃2019/09/04|Act&#8211;Age&nbsp;8
 </span>	
-		 <p></p>
+		  <p style="border-bottom: 1px solid black;"></p>
 <strong id="jjk" style="padding-top:50px">Jujutsu Kaisen</strong>
 <p></p>
 <span>
@@ -440,7 +440,7 @@
 <br>
 <br>|*70774(6)|------|------|------|------┃*,177,868(167)┃2018/12/04|Jujutsu&nbsp;Kaisen&nbsp;0&nbsp;Tokyo&nbsp;Metropolitan&nbsp;Magic&nbsp;Technical&nbsp;School
 </span>	
-		  <p></p>
+		  <p style="border-bottom: 1px solid black;"></p>
 <strong id="csm" style="padding-top:50px">Chainsaw Man</strong>
 <p></p>
 <span>
@@ -450,7 +450,27 @@
 <br>|*25075(3)|*50952|*61532|------|------┃*,*61,532(*17)┃2019/08/02|Chainsaw&nbsp;Man&nbsp;3
 
 </span>	
-		 
+		  
+<h1 id="ongoing" style="padding-top:30px">Jump&#43;</h1>
+<p></p>
+<span>
+**|Week&nbsp;1&nbsp;(F)|Week&nbsp;2&nbsp;|Week&nbsp;3&nbsp;|Week&nbsp;4&nbsp;|Week&nbsp;5&nbsp;┃OriconLTD(DIP)┃Pub.&nbsp;Date&nbsp;|Title
+
+</span>
+<p>
+	-
+</p>
+<strong id="current" style="padding-top:50px"> Current Volumes Data (September 2019)</strong>
+<p></p>		  
+<span>
+**|Week&nbsp;1&nbsp;(F)|Week&nbsp;2&nbsp;|Week&nbsp;3&nbsp;|Week&nbsp;4&nbsp;|Week&nbsp;5&nbsp;┃OriconLTD(DIP)┃Pub.&nbsp;Date&nbsp;|Title	
+		
+<br>
+<br>	
+<br>[Not Ranked]
+
+</span>
+<h2 id="ongoing" style="padding-top:30px">Ongoing series </h2>		  
 <div style="height: 100px"></div>
 <p> More Coming soon!(ish)</p>		  
   </div><!-- end content -->	
