--- a/TOC/oricon/index.html
+++ b/TOC/oricon/index.html
@@ -399,7 +399,7 @@
 <p></p>
 <span>
 |Week&nbsp;1(F)|Week&nbsp;2|Week&nbsp;3|Week&nbsp;4|Week&nbsp;5┃OriconLTD(DIP)┃Pub.&nbsp;Date&nbsp;|Title
-<br>|*36075(6)|------|------|------|------┃*,*36,075(**6)┃2017/07/04|Dr&#46;Stone&nbsp;1
+<br>|*36075(6)|------|------|------|------┃*,238,685(783)┃2017/07/04|Dr&#46;Stone&nbsp;1
 <br>|*50370(7)|------|------|------|------┃*,*50,370(**7)┃2017/09/04|Dr&#46;Stone&nbsp;2
 <br>|*48507(7)|------|------|------|------┃*,*48,507(**7)┃2017/12/04|Dr&#46;Stone&nbsp;3
 <br>|*36418(3)|*66013|------|------|------┃*,*66,013(*10)┃2018/02/02|Dr&#46;Stone&nbsp;4
