--- a/TOC/oricon/index.html
+++ b/TOC/oricon/index.html
@@ -493,7 +493,7 @@
 
 </span>			  
 		  <p style="border-bottom: 1px solid black;"></p>
-<strong id="ditf" style="padding-top:50px">Darling in the Franxxstrong>
+<strong id="ditf" style="padding-top:50px">Darling in the Franxx</strong>
 <p></p>
 <span>
 |Week&nbsp;1(F)|Week&nbsp;2|Week&nbsp;3|Week&nbsp;4|Week&nbsp;5┃OriconLTD(DIP)┃Pub.&nbsp;Date&nbsp;|Title
