--- a/TOC/oricon/index.html
+++ b/TOC/oricon/index.html
@@ -70,7 +70,7 @@
 <a href="#aoflag" >&gt;&gt; Blue Flag</a>
 <a href="#ditf" >&gt;&gt; Darling in the Franxx</a>
 <a href="#jigo" >&gt;&gt; Jigokuraku</a>
-<a href="#hananochi" >&gt;&gt; Hana&nbsp;Nochi&nbsp;Hare～Boys&nbsp;Over&nbsp;Flowers&nbsp;Next&nbsp;Season～</a>
+<a href="#hananochi" >&gt;&gt; Hana&nbsp;Nochi&nbsp;Hare</a>
 <a href="#letoile" >&gt;&gt; Shokugeki&nbsp;no&nbsp;Soma:&nbsp;L'étoile</a>
 <a href="#weh" >&gt;&gt; World's End Harem</a>
 <a href="#vigilante" >&gt;&gt; VIGILANTE My Hero Academia ILLEGALS</a>    
