--- a/TOC/oricon/index.html
+++ b/TOC/oricon/index.html
@@ -66,7 +66,7 @@
       <a href="#aa" >&gt;&gt; Act-Age</a>
       <a href="#jjk" >&gt;&gt; Jujutsu Kaisen</a>
       <a href="#csm" >&gt;&gt; Chainsaw Man</a>
-      <p>Jump&#43;</p>
+      <p style="background:none">Jump&#43;</p>
 <a href="#aoflag" >&gt;&gt; Blue Flag</a>
 <a href="#ditf" >&gt;&gt; Darling in the Franxx</a>
 <a href="#jigo" >&gt;&gt; Jigokuraku</a>
@@ -591,6 +591,7 @@
 
 <div class="bookmark">
 <h1 >Navigation</h1>
+<div class="quick">	
 <a href="#latest" >&gt;&gt; Latest Volume Data</a>
 <p> Ongoing series </p>
 <a href="#op" >&gt;&gt; One Piece</a>
@@ -614,6 +615,7 @@
 <a href="#letoile" >&gt;&gt; Shokugeki&nbsp;no&nbsp;Soma:&nbsp;L'étoile</a>
 <a href="#weh" >&gt;&gt; World's End Harem</a>
 <a href="#vigilante" >&gt;&gt; VIGILANTE My Hero Academia ILLEGALS</a>
+</div>
 </div>
 	</div> <!-- end margin -->
     
