--- a/TOC/oricon/index.html
+++ b/TOC/oricon/index.html
@@ -463,21 +463,22 @@
 <p></p>
 <span>
 **|Week&nbsp;1&nbsp;(F)|Week&nbsp;2&nbsp;|Week&nbsp;3&nbsp;|Week&nbsp;4&nbsp;|Week&nbsp;5&nbsp;┃OriconLTD(DIP)┃Pub.&nbsp;Date&nbsp;|Title
-
+<br>*1|*39461(4)|******|******|104136|126037┃*,271,265(*81)┃2019/07/04|SPY×FAMILY　1
+<br>*2|*48098(3)|*91617|110893|------|------┃*,110,893(*17)┃2019/08/02|World's&nbsp;End&nbsp;Harem&nbsp;9
+<br>*3|*52663(5)|*74635|------|------|------┃*,*74,635(*12)┃2019/09/04|Jigokuraku 7
+<br>*4|*33601(4)|*53438|------|------|------┃*,*53,438(*11)┃2019/07/04|Hana&nbsp;Nochi&nbsp;Hare～Boys&nbsp;Over&nbsp;Flowers&nbsp;Next&nbsp;Season～&nbsp;13
+<br>*5|*25993(3)|*48174|------|------|------┃*,*48,174(*10)┃2019/08/02|World's&nbsp;End&nbsp;Harem&nbsp;Fantasia&nbsp;3
+<br>*6|*20392(3)|*39804|------|------|------┃*,*39,804(*10)┃2017/06/04|Hetalia&nbsp;-&nbsp;World&nbsp;Stars&nbsp;&nbsp;4
+<br>*7|*33650(5)|------|------|------|------┃*,*33,650(**5)┃2019/09/04|Darling&nbsp;in&nbsp;the&nbsp;Franxx&nbsp;6
+<br>*8|*21257(7)|------|------|------|------┃*,*21,257(**7)┃2019/08/02|The&nbsp;Reincarnation&nbsp;Magician&nbsp;of&nbsp;the&nbsp;Inferior&nbsp;Eyes&nbsp;&nbsp;2
+<br>*9|*18388(5)|------|------|------|------┃*,*18,388(**5)┃2019/09/04|Saotome&nbsp;Shimai&nbsp;wa&nbsp;Manga&nbsp;no&nbsp;Tame&nbsp;nara!?&nbsp;5
+<br>10|*17280(4)|------|------|------|------┃*,*17,280(**4)┃2019/04/04|Blue&nbsp;Flag&nbsp;6
+<br>11|*12284(4)|------|------|------|------┃*,*12,284(**4)┃2018/10/04|Let's!&nbsp;Haikyu!?&nbsp;7
+<br>
 </span>
 <p>
 	-
 </p>
-<strong id="current" style="padding-top:50px"> Current Volumes Data (September 2019)</strong>
-<p></p>		  
-<span>
-**|Week&nbsp;1&nbsp;(F)|Week&nbsp;2&nbsp;|Week&nbsp;3&nbsp;|Week&nbsp;4&nbsp;|Week&nbsp;5&nbsp;┃OriconLTD(DIP)┃Pub.&nbsp;Date&nbsp;|Title	
-		
-<br>
-<br>	
-<br>[Not Ranked]
-
-</span>
 <h2 id="ongoing" style="padding-top:30px">Ongoing series </h2>
 
 <strong id="aoflag" style="padding-top:50px">Blue Flag</strong>
@@ -500,8 +501,9 @@
 <br>|*51926(3)|*94466|114962|129262|------┃*,212,089(290)┃2018/02/02|Darling&nbsp;in&nbsp;the&nbsp;Franxx&nbsp;1
 <br>|*76369(5)|106548|121431|------|------┃*,121,431(*19)┃2018/05/02|Darling&nbsp;in&nbsp;the&nbsp;Franxx&nbsp;2
 <br>|*47618(4)|*74789|------|------|------┃*,*74,789(*11)┃2018/10/04|Darling&nbsp;in&nbsp;the&nbsp;Franxx&nbsp;3
-<br>|*57091(7)|------|------|------|------┃*,*57,091(**7)┃2019/02/04|Darling&nbsp;in&nbsp;the&nbsp;Franxx&nbsp;4&nbsp;
+<br>|*57091(7)|------|------|------|------┃*,*57,091(**7)┃2019/02/04|Darling&nbsp;in&nbsp;the&nbsp;Franxx&nbsp;4
 <br>|*34434(4)|*55801|------|------|------┃*,*55,801(*11)┃2019/05/02|Darling&nbsp;in&nbsp;the&nbsp;Franxx&nbsp;5
+<br>|*33650(5)|------|------|------|------┃*,*33,650(**5)┃2019/09/04|Darling&nbsp;in&nbsp;the&nbsp;Franxx&nbsp;6
 
 </span>		
 		  <p style="border-bottom: 1px solid black;"></p>
@@ -514,8 +516,8 @@
 <br>|******(3)|------|------|------|------┃*,***,***(**3)┃2018/08/03|Jigokuraku&nbsp;3&nbsp;<17,141
 <br>|*20139(3)|------|------|------|------┃*,*20,139(**3)┃2018/11/02|Jigokuraku&nbsp;4
 <br>|*46461(7)|------|------|------|------┃*,*46,461(**7)┃2019/03/04|Jigokuraku&nbsp;5
-<br>|*48014(6)|------|------|------|------┃*,*48,014(**6)┃2019/06/04|Jigokuraku&nbsp;6
-
+<br>|*48014(6)|*70651|------|------|------┃*,*70,651(*13)┃2019/06/04|Jigokuraku&nbsp;6
+<br>|*52663(5)|*74635|------|------|------┃*,*74,635(*12)┃2019/09/04|Jigokuraku&nbsp;7
 </span>				  
 		  <p style="border-bottom: 1px solid black;"></p>
 <strong id="hananochi" style="padding-top:50px">Hana&nbsp;Nochi&nbsp;Hare～Boys&nbsp;Over&nbsp;Flowers&nbsp;Next&nbsp;Season～</strong>
@@ -528,7 +530,7 @@
 <br>|*60819(7)|*82062|------|------|------┃*,*82,062(*14)┃2016/07/04|Hana&nbsp;Nochi&nbsp;Hare～Boys&nbsp;Over&nbsp;Flowers&nbsp;Next&nbsp;Season～&nbsp;4
 <br>|*30878(3)|*69555|------|------|------┃*,*69,555(*10)┃2016/12/02|Hana&nbsp;Nochi&nbsp;Hare～Boys&nbsp;Over&nbsp;Flowers&nbsp;Next&nbsp;Season～&nbsp;5
 <br>|*40805(6)|*59517|------|------|------┃*,*59,517(*13)┃2017/04/04|Hana&nbsp;Nochi&nbsp;Hare～Boys&nbsp;Over&nbsp;Flowers&nbsp;Next&nbsp;Season～&nbsp;6
-<br>|*28822(3)|*60703|------|------|------┃*60,703(*10)┃2017/08/04|Hana&nbsp;Nochi&nbsp;Hare～Boys&nbsp;Over&nbsp;Flowers&nbsp;Next&nbsp;Season～&nbsp;7
+<br>|*28822(3)|*60703|------|------|------┃*,*60,703(*10)┃2017/08/04|Hana&nbsp;Nochi&nbsp;Hare～Boys&nbsp;Over&nbsp;Flowers&nbsp;Next&nbsp;Season～&nbsp;7
 <br>|*34020(4)|*57733|------|------|------┃*,*57,733(*11)┃2018/01/04|Hana&nbsp;Nochi&nbsp;Hare～Boys&nbsp;Over&nbsp;Flowers&nbsp;Next&nbsp;Season～&nbsp;8
 <br>|*53379(5)|*79246|*97511|------|------┃*,154,375(*61)┃2018/04/04|Hana&nbsp;Nochi&nbsp;Hare～Boys&nbsp;Over&nbsp;Flowers&nbsp;Next&nbsp;Season～&nbsp;9
 <br>|*45210(3)|*96769|116467|------|------┃*,116,467(*17)┃2018/08/03|Hana&nbsp;Nochi&nbsp;Hare～Boys&nbsp;Over&nbsp;Flowers&nbsp;Next&nbsp;Season～&nbsp;10
@@ -565,7 +567,7 @@
 <br>|*96134(7)|121365|------|------|------┃*,121,365(*14)┃2019/03/04|World's&nbsp;End&nbsp;Harem&nbsp;8
 <br>
 <br>|*34282(3)|*54085|------|------|------┃*,*54,085(*10)┃2018/11/02|World's&nbsp;End&nbsp;Harem&nbsp;Fantasia&nbsp;1
-<br>|*50807(7)|------|------|------|------┃*,*50,807(**7)┃2019/03/04|World's&nbsp;End&nbsp;Harem&nbsp;Fantasia&nbsp;2&nbsp;	
+<br>|*50807(7)|------|------|------|------┃*,*50,807(**7)┃2019/03/04|World's&nbsp;End&nbsp;Harem&nbsp;Fantasia&nbsp;2	
 </span>				  
 		  <p style="border-bottom: 1px solid black;"></p>
 <strong id="vigilante" style="padding-top:50px">VIGILANTE My Hero Academia ILLEGALS</strong>
