--- a/TOC/oricon/index.html
+++ b/TOC/oricon/index.html
@@ -462,7 +462,7 @@
 <h1 id="ongoing" style="padding-top:30px">Jump&#43;</h1>
 <p></p>
 <span>
-**|Week&nbsp;1&nbsp;(F)|Week&nbsp;2&nbsp;|Week&nbsp;3&nbsp;|Week&nbsp;4&nbsp;|Week&nbsp;5&nbsp;┃OriconLTD(DIP)┃Pub.&nbsp;Date&nbsp;|Title
+**|Week&nbsp;1(F)|Week&nbsp;2|Week&nbsp;3|Week&nbsp;4|Week&nbsp;5┃OriconLTD(DIP)┃Pub.&nbsp;Date&nbsp;|Title
 <br>*1|*39461(4)|******|******|104136|126037┃*,271,265(*81)┃2019/07/04|SPY×FAMILY　1
 <br>*2|*48098(3)|*91617|110893|------|------┃*,110,893(*17)┃2019/08/02|World's&nbsp;End&nbsp;Harem&nbsp;9
 <br>*3|*52663(5)|*74635|------|------|------┃*,*74,635(*12)┃2019/09/04|Jigokuraku 7
