--- a/TOC/oricon/index.html
+++ b/TOC/oricon/index.html
@@ -67,6 +67,7 @@
       <a href="#jjk" >&gt;&gt; Jujutsu Kaisen</a>
       <a href="#csm" >&gt;&gt; Chainsaw Man</a>
       <p style="background:none">Jump&#43;</p>
+<a href="#plus" >&gt;&gt; Latest Volume Data</a>
 <a href="#aoflag" >&gt;&gt; Blue Flag</a>
 <a href="#ditf" >&gt;&gt; Darling in the Franxx</a>
 <a href="#jigo" >&gt;&gt; Jigokuraku</a>
@@ -459,8 +460,9 @@
 
 </span>	
 		  
-<h1 id="ongoing" style="padding-top:30px">Jump&#43;</h1>
+<h1 id="jumpplus" style="padding-top:30px">Jump&#43;</h1>
 <p></p>
+<strong id="plus" style="padding-top:50px"> Latest  Volumes Data </strong>		  
 <span>
 **|Week&nbsp;1(F)|Week&nbsp;2|Week&nbsp;3|Week&nbsp;4|Week&nbsp;5┃OriconLTD(DIP)┃Pub.&nbsp;Date&nbsp;|Title
 <br>*1|*39461(4)|******|******|104136|126037┃*,271,265(*81)┃2019/07/04|SPY×FAMILY　1
@@ -479,7 +481,7 @@
 <p>
 	-
 </p>
-<h2 id="ongoing" style="padding-top:30px">Ongoing series </h2>
+<h2 id="ongoingp" style="padding-top:30px">Ongoing series </h2>
 
 <strong id="aoflag" style="padding-top:50px">Blue Flag</strong>
 <p></p>
@@ -610,6 +612,7 @@
 <a href="#jjk" >&gt;&gt; Jujutsu Kaisen</a>
 <a href="#csm" >&gt;&gt; Chainsaw Man</a>
 <p>Jump&#43;</p>
+<a href="#plus" >&gt;&gt; Latest Volume Data</a>
 <a href="#aoflag" >&gt;&gt; Blue Flag</a>
 <a href="#ditf" >&gt;&gt; Darling in the Franxx</a>
 <a href="#jigo" >&gt;&gt; Jigokuraku</a>
