--- a/TOC/mplus/index.html
+++ b/TOC/mplus/index.html
@@ -13,12 +13,12 @@
 	  <link rel="shortcut icon"
    type="image/x-icon"
         href="/TOC/img/fav.ico">
-<title>Mangaplus views log</title>
+<title>Weekly Shonen Jump Oricon Archive</title>
 	<meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=yes">
-<meta property="og:title" content="Mangaplus views log">
-<meta property="og:description" content="Archive of Mangaplus Views">
-<meta property="og:image" content="https://mangaplus.shueisha.co.jp/img/web_logo_190118_light.8433a460.png">
-<meta property="og:url" content="https://manganimy.github.io/TOC/mplus">
+<meta property="og:title" content="Weekly Shonen Jump Oricon">
+<meta property="og:description" content="Archive of Shonen Jump Oricon data">
+<meta property="og:image" content="https://manganimy.github.io/TOC/img/meta.jpg">
+<meta property="og:url" content="https://manganimy.github.io/TOC/oricon">
 <meta name="twitter:card" content="summary_large_image">	
 <style>
 body {
