--- a/TOC/19_42/index.html
+++ b/TOC/19_42/index.html
@@ -50,9 +50,9 @@
     </div>
   </div>
   <div id="nav-center">
-	  <a href="https://manganimy.github.io/TOC/19_40/"><img src="https://manganimy.github.io/TOC/img/prev2.png"></a>
-	  <a><button class="dropbtn">#41</button></a>
- 	  <a href="#"><img src="https://manganimy.github.io/TOC/img/next2.png"></a>
+	  <a href="https://manganimy.github.io/TOC/19_41/"><img src="https://manganimy.github.io/TOC/img/prev2.png"></a>
+	  <a><button class="dropbtn">#42</button></a>
+ 	  <a href="https://manganimy.github.io/TOC/19_43/"><img src="https://manganimy.github.io/TOC/img/next2.png"></a>
   </div>
   <div class="lang">
   <div class="dropdown">
@@ -71,9 +71,9 @@
 		<h1><img src="img/top.jpg" alt=""></h1>
 		<div class="txt_read"><span>This week's weekly ShonenJump posting order &amp; comments from the author.</span></div>
 <div id="grid-container">
-  <div class="grid-item"><div class="img_nav"><a href="https://manganimy.github.io/TOC/19_40/"><img src="https://manganimy.github.io/TOC/img/prev1.png" alt=""></a></div></div>
+  <div class="grid-item"><div class="img_nav"><a href="https://manganimy.github.io/TOC/19_41/"><img src="https://manganimy.github.io/TOC/img/prev1.png" alt=""></a></div></div>
   <div class="grid-item"><div class="img_wj"><img src="img/img_wj.jpg" alt=""></div></div>
-  <div class="grid-item"><div class="img_nav"><a href="#"><img src="https://manganimy.github.io/TOC/img/next1.png" alt=""></a></div></div>  
+  <div class="grid-item"><div class="img_nav"><a href="https://manganimy.github.io/TOC/19_43/"><img src="https://manganimy.github.io/TOC/img/next1.png" alt=""></a></div></div>  
 </div>
 	</div><!-- end .header -->
 
