--- a/TOC/19_44/index.html
+++ b/TOC/19_44/index.html
@@ -54,7 +54,7 @@
   <div id="nav-center">
 	  <a href="https://manganimy.github.io/TOC/19_43/"><img src="https://manganimy.github.io/TOC/img/prev2.png"></a>
 	  <a><button class="dropbtn">#44</button></a>
- 	  <a href="https://manganimy.github.io/TOC/19_45/"><img src="https://manganimy.github.io/TOC/img/next2.png"></a>
+ 	  <a href="#"><img src="https://manganimy.github.io/TOC/img/next2.png"></a>
   </div>
   <div class="lang">
   <div class="dropdown">
@@ -75,7 +75,7 @@
 <div id="grid-container">
   <div class="grid-item"><div class="img_nav"><a href="https://manganimy.github.io/TOC/19_43/"><img src="https://manganimy.github.io/TOC/img/prev1.png" alt=""></a></div></div>
   <div class="grid-item"><div class="img_wj"><img src="img/img_wj.jpg" alt=""></div></div>
-  <div class="grid-item"><div class="img_nav"><a href="https://manganimy.github.io/TOC/19_45/"><img src="https://manganimy.github.io/TOC/img/next1.png" alt=""></a></div></div>  
+  <div class="grid-item"><div class="img_nav"><a href="#"><img src="https://manganimy.github.io/TOC/img/next1.png" alt=""></a></div></div>  
 </div>
 	</div><!-- end .header -->
 
