--- a/TOC/index.html
+++ b/TOC/index.html
@@ -181,9 +181,17 @@
   <img src="img/19_40.jpg">
 </a>
 <h2><a href="19_41/" style="display:block; width:100%">Weekly Shonen Jump #41 2019<img src="img/next2.png" style="padding:.02em; width:.35em; height:.7em"></a></h2>
-<a href="19_34/">
+<a href="19_41/">
   <img src="img/19_41.jpg">
-</a>  	 		  
+</a>
+<h2><a href="19_42/" style="display:block; width:100%">Weekly Shonen Jump #42 2019<img src="img/next2.png" style="padding:.02em; width:.35em; height:.7em"></a></h2>
+<a href="19_42/">
+  <img src="img/19_42.jpg">
+</a> 
+<h2><a href="19_43/" style="display:block; width:100%">Weekly Shonen Jump #43 2019<img src="img/next2.png" style="padding:.02em; width:.35em; height:.7em"></a></h2>
+<a href="19_43/">
+  <img src="img/19_43.jpg">
+</a>  	  	   	 		  
 <img src="img/mascot.png" style="width:20vw; max-width:15opx; margin-top:10px;" class="center">
 	<p style="border-top: 2px solid yellow"> </p>
 <div style="text-align:center;">
