--- a/TOC/oricon/index.html
+++ b/TOC/oricon/index.html
@@ -358,7 +358,7 @@
 <br>|107041(4)|159717|183206|198458|214609┃*,529,300(*172)┃2019/04/04|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;15
 <br>|225102(4)|302423|337978|357346|384400┃*,551,608(**81)┃2019/07/04|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;16
 <br>
-<br>|*51963(4)|******|******|******|119215┃*,233,572(**81)┃2019/07/04|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;Official&nbsp;Fanbook&nbsp;Demon&nbsp;Coprse&nbsp;Records
+<br>|*51963(4)|******|******|******|119215┃*,233,572(**81)┃2019/07/04|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;Official&nbsp;Fanbook&nbsp;Demon&nbsp;Corps&nbsp;Records
 
 </span>	
 		   <p style="border-bottom: 1px solid black;"></p>
