--- a/TOC/oricon/index.html
+++ b/TOC/oricon/index.html
@@ -93,11 +93,11 @@
 <p></p>
 <span>
 **|Week&nbsp;1&nbsp;(F)|Week&nbsp;2&nbsp;|Week&nbsp;3&nbsp;|Week&nbsp;4&nbsp;|Week&nbsp;5&nbsp;┃OriconLTD(DIP)┃Pub.&nbsp;Date&nbsp;|Title
-<br>*1|1378177(4)|1716100|1855702|1923919|1966556┃2,120,381(*81)┃2019/07/04|One&nbsp;Piece&nbsp;93
+<br>*1|1378177(4)|1716100|1855702|1923919|1966556┃2,132,230(*88)┃2019/07/04|One&nbsp;Piece&nbsp;93
 <br>*2|*498226(4)|*709028|*793638|*838642|*863207┃*,984,493(228)┃2018/10/04|Hunter&nbsp;x&nbsp;Hunter&nbsp;36
-<br>*3|*190803(3)|*399399|*497864|*544803|*570463┃*,611,933(*52)┃2019/08/02|The&nbsp;Promised&nbsp;Neverland&nbsp;15
-<br>*4|*201910(3)|*406721|*496745|*538784|*561135┃*,573,043(*38)┃2019/08/02|My&nbsp;Hero&nbsp;Academia&nbsp;24
-<br>*5|*225102(4)|*302423|*337978|*357346|*384400┃*,551,608(*81)┃2019/07/04|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;16
+<br>*3|*190803(3)|*399399|*497864|*544803|*570463┃*,622,932(*59)┃2019/08/02|The&nbsp;Promised&nbsp;Neverland&nbsp;15
+<br>*4|*225102(4)|*302423|*337978|*357346|*384400┃*,600,688(*88)┃2019/07/04|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;16
+<br>*5|*201910(3)|*406721|*496745|*538784|*561135┃*,573,043(*38)┃2019/08/02|My&nbsp;Hero&nbsp;Academia&nbsp;24
 <br>*6|*325332(6)|*418233|*461080|*485385|*498294┃*,537,297(*76)┃2019/06/04|Haikyuu&#33;&#33;&nbsp;38
 <br>*7|*120146(4)|*173597|*195982|*206343|*213502┃*,224,981(*46)┃2019/07/04|Black&nbsp;Clover&nbsp;21
 <br>*8|**98500(4)|*136161|*152250|*162156|*169575┃*,181,712(*46)┃2019/07/04|Jujutsu&nbsp;Kaisen&nbsp;6
@@ -114,10 +114,10 @@
 <p></p>		  
 <span>
 **|Week&nbsp;1&nbsp;(F)|Week&nbsp;2&nbsp;|Week&nbsp;3&nbsp;|Week&nbsp;4&nbsp;|Week&nbsp;5&nbsp;┃OriconLTD(DIP)┃Pub.&nbsp;Date&nbsp;|Title	
-<br>*1|*260748(5)|*356785|*408394|-------|-------┃*,408,394(*19)┃2019/09/04|Haikyuu&#33;&#33;&nbsp;39
-<br>*2|**68740(5)|**93266|*108006|-------|-------┃*,108,006(*19)┃2019/09/04|Dr&#46;Stone&nbsp;12
-<br>*3|**70467(5)|**93975|*107952|-------|-------┃*,107,952(*19)┃2019/09/04|We&nbsp;Never&nbsp;Learn&nbsp;13
-<br>*4|**66245(5)|**92650|*107030|-------|-------┃*,107,030(*19)┃2019/09/04|Act-Age&nbsp;8	
+<br>*1|*260748(5)|*356785|*408394|*440330|-------┃*,440,330(*26)┃2019/09/04|Haikyuu&#33;&#33;&nbsp;39
+<br>*2|**68740(5)|**93266|*108006|*117598|-------┃*,117,598(*26)┃2019/09/04|Dr&#46;Stone&nbsp;12
+<br>*3|**66245(5)|**92650|*107030|*116359|-------┃*,116,359(*26)┃2019/09/04|Act-Age&nbsp;8
+<br>*4|**70467(5)|**93975|*107952|*115604|-------┃*,115,604(*26)┃2019/09/04|We&nbsp;Never&nbsp;Learn&nbsp;13
 <br>
 <br>	
 <br>[Not Ranked]
@@ -173,7 +173,7 @@
 <br>|1441771(6)|1720690|1835854|1905040|1950386┃2,174,407(125)┃2018/09/04|One&nbsp;Piece&nbsp;90
 <br>|1514459(6)|1801917|1914363|1993806|2051518┃2,280,644(167)┃2018/12/04|One&nbsp;Piece&nbsp;91
 <br>|*231555(0)|1386360|1604070|1710034|1776868┃2,039,350(168)┃2019/03/04|One&nbsp;Piece&nbsp;92
-<br>|1378177(4)|1716100|1855702|1923919|1966556┃2,120,381(*81)┃2019/07/04|One&nbsp;Piece&nbsp;93
+<br>|1378177(4)|1716100|1855702|1923919|1966556┃2,132,230(*88)┃2019/07/04|One&nbsp;Piece&nbsp;93
 </span>
 		  <p style="border-bottom: 1px solid black;"></p>
 <strong id="hxh" style="padding-top:50px">Hunter x Hunter</strong>
@@ -236,7 +236,7 @@
 <br>|369191(7)|464621|507475|535329|------┃*,619,239(105)┃2019/02/04|Haikyuu&#33;&#33;&nbsp;36
 <br>|313860(4)|443078|492017|516488|------┃*,550,443(*46)┃2019/04/04|Haikyuu&#33;&#33;&nbsp;37
 <br>|325332(6)|------|------|------|------┃*,325,332(**6)┃2019/06/04|Haikyuu&#33;&#33;&nbsp;38
-<br>|260748(5)|356785|408394|------|------┃*,408,394(*19)┃2019/09/04|Haikyuu&#33;&#33;&nbsp;39
+<br>|260748(5)|356785|408394|440330|------┃*,440,330(*26)┃2019/09/04|Haikyuu&#33;&#33;&nbsp;39
 <br>
 <br>|******(2)|------|------|------|------┃*,***,***(**2)┃2014/01/04|Haikyuu&#33;&#33;&nbsp;9&nbsp;LE&nbsp;&#43;&nbsp;Drama&nbsp;CD&nbsp;&lt;24,742
 <br>|108722(5)|------|------|------|------┃*,108,722(**5)┃2015/03/04|Haikyuu&#33;&#33;&nbsp;15&nbsp;LE&nbsp;&#43;&nbsp;OVA
@@ -341,22 +341,22 @@
 <p></p>
 <span>
 |Week&nbsp;1(F)|Week&nbsp;2|Week&nbsp;3|Week&nbsp;4|Week&nbsp;5┃OriconLTD (DIP)┃Pub.&nbsp;Date&nbsp;|Title
-<br>|******(3)|------|------|------|------┃*,621,561(1207)┃2016/06/03|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;1
-<br>|*16323(4)|------|------|------|------┃*,595,670(1145)┃2016/08/04|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;2
-<br>|*25967(6)|------|------|------|------┃*,583,347(1084)┃2016/10/04|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;3
-<br>|*21815(3)|------|------|------|------┃*,572,601(1025)┃2016/12/02|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;4
-<br>|*41476(3)|*65822|------|------|------┃*,572,610(*934)┃2017/03/03|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;5
-<br>|*65937(6)|*84742|------|------|------┃*,578,013(*874)┃2017/05/02|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;6
-<br>|*57083(3)|*96527|------|------|------┃*,563,646(*780)┃2017/08/04|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;7
-<br>|*81312(5)|109936|122681|------|------┃*,561,059(*719)┃2017/10/04|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;8
-<br>|*89077(7)|110729|******|130267|------┃*,551,520(*658)┃2017/12/04|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;9
-<br>|*65861(3)|118511|133976|------|------┃*,549,581(*570)┃2018/03/02|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;10
-<br>|113325(7)|135313|******|153976|------┃*,551,200(*476)┃2018/06/04|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;11
-<br>|*64061(3)|118990|138412|------|------┃*,543,111(*416)┃2018/08/03|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;12
-<br>|*74425(3)|129051|146318|------|------┃*,537,487(*325)┃2018/11/02|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;13
-<br>|*78819(3)|126981|145143|******|160110┃*,522,930(*262)┃2019/01/04|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;14
-<br>|107041(4)|159717|183206|198458|214609┃*,529,300(*172)┃2019/04/04|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;15
-<br>|225102(4)|302423|337978|357346|384400┃*,551,608(**81)┃2019/07/04|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;16
+<br>|******(3)|------|------|------|------┃*,663,085(1214)┃2016/06/03|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;1
+<br>|*16323(4)|------|------|------|------┃*,636,050(1152)┃2016/08/04|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;2
+<br>|*25967(6)|------|------|------|------┃*,622,527(1091)┃2016/10/04|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;3
+<br>|*21815(3)|------|------|------|------┃*,611,277(1032)┃2016/12/02|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;4
+<br>|*41476(3)|*65822|------|------|------┃*,611,119(*941)┃2017/03/03|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;5
+<br>|*65937(6)|*84742|------|------|------┃*,619,026(*881)┃2017/05/02|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;6
+<br>|*57083(3)|*96527|------|------|------┃*,611,381(*787)┃2017/08/04|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;7
+<br>|*81312(5)|109936|122681|------|------┃*,609,882(*726)┃2017/10/04|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;8
+<br>|*89077(7)|110729|******|130267|------┃*,598,210(*665)┃2017/12/04|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;9
+<br>|*65861(3)|118511|133976|------|------┃*,594,707(*577)┃2018/03/02|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;10
+<br>|113325(7)|135313|******|153976|------┃*,594,909(*483)┃2018/06/04|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;11
+<br>|*64061(3)|118990|138412|------|------┃*,586,308(*423)┃2018/08/03|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;12
+<br>|*74425(3)|129051|146318|------|------┃*,580,209(*332)┃2018/11/02|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;13
+<br>|*78819(3)|126981|145143|******|160110┃*,565,769(*269)┃2019/01/04|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;14
+<br>|107041(4)|159717|183206|198458|214609┃*,572,335(*179)┃2019/04/04|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;15
+<br>|225102(4)|302423|337978|357346|384400┃*,600,688(**88)┃2019/07/04|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;16
 <br>
 <br>|*51963(4)|******|******|******|119215┃*,233,572(**81)┃2019/07/04|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;Official&nbsp;Fanbook&nbsp;Demon&nbsp;Corps&nbsp;Records
 
@@ -380,7 +380,7 @@
 <br>|180160(3)|327390|404387|453243|488270┃*,697,567(136)┃2019/01/04|The&nbsp;Promised&nbsp;Neverland&nbsp;12
 <br>|273123(7)|368157|421216|453332|473978┃*,529,687(*77)┃2019/03/04|The&nbsp;Promised&nbsp;Neverland&nbsp;13
 <br>|375151(6)|------|------|------|------┃*,679,519(*76)┃2019/06/04|The&nbsp;Promised&nbsp;Neverland&nbsp;14
-<br>|190803(3)|399399|497864|544803|570463┃*,611,933(*52)┃2019/08/02|The&nbsp;Promised&nbsp;Neverland&nbsp;15
+<br>|190803(3)|399399|497864|544803|570463┃*,622,932(*59)┃2019/08/02|The&nbsp;Promised&nbsp;Neverland&nbsp;15
 <br>
 <br>|*62333(7)|*73501|******|*89326|------┃*,114,139(*77)┃2019/03/04|The&nbsp;Promised&nbsp;Neverland&nbsp;13&nbsp;LE
 </span>	
@@ -401,7 +401,7 @@
 <br>|*74913(7)|*93561|******|106921|------┃*,106,921(*28)┃2019/02/04|We&nbsp;Never&nbsp;Learn&nbsp;10
 <br>|*63097(4)|*91845|104444|------|------┃*,104,444(*18)┃2019/04/04|We&nbsp;Never&nbsp;Learn&nbsp;11
 <br>|*76366(6)|*99474|110940|117998|------┃*,117,998(*27)┃2019/06/04|We&nbsp;Never&nbsp;Learn&nbsp;12
-<br>|*70467(5)|*93975|107952|------|------┃*,107,952(*19)┃2019/09/04|We&nbsp;Never&nbsp;Learn&nbsp;13
+<br>|*70467(5)|*93975|107952|115604|------┃*,115,604(*26)┃2019/09/04|We&nbsp;Never&nbsp;Learn&nbsp;13
 </span>	
 		  <p style="border-bottom: 1px solid black;"></p>
 <strong id="ds" style="padding-top:50px">Dr.Stone</strong>
@@ -419,7 +419,7 @@
 <br>|*60550(7)|*77121|******|*91300|------┃*,*91,300(*28)┃2019/02/04|Dr&#46;Stone&nbsp;9
 <br>|*49856(4)|*73893|------|------|------┃*,*73,893(*11)┃2019/04/04|Dr&#46;Stone&nbsp;10
 <br>|*56414(4)|*81274|*92654|******|106828┃*,106,828(*32)┃2019/07/04|Dr&#46;Stone&nbsp;11
-<br>|*68740(5)|*93266|108006|------|------┃*,108,006(*19)┃2019/09/04|Dr&#46;Stone&nbsp;12
+<br>|*68740(5)|*93266|108006|117598|------┃*,117,598(*26)┃2019/09/04|Dr&#46;Stone&nbsp;12
 </span>	
 		 <p style="border-bottom: 1px solid black;"></p>
 <strong id="aa" style="padding-top:50px">Act-Age</strong>
@@ -433,7 +433,7 @@
 <br>|*52319(7)|*68191|******|*82040|------┃*,*82,040(*28)┃2019/02/04|Act&#8211;Age&nbsp;5
 <br>|*54353(4)|*80820|*92715|101233|------┃*,101,233(*25)┃2019/05/02|Act&#8211;Age&nbsp;6
 <br>|*61834(4)|*89891|102933|******|117666┃*,117,666(*32)┃2019/07/04|Act&#8211;Age&nbsp;7
-<br>|*66245(5)|*92650|------|------|------┃*,*92,650(*12)┃2019/09/04|Act&#8211;Age&nbsp;8
+<br>|*66245(5)|*92650|107030|116359|------┃*,116,359(*26)┃2019/09/04|Act&#8211;Age&nbsp;8
 </span>	
 		  <p style="border-bottom: 1px solid black;"></p>
 <strong id="jjk" style="padding-top:50px">Jujutsu Kaisen</strong>
@@ -466,7 +466,7 @@
 <p></p>			  
 <span>
 **|Week&nbsp;1(F)|Week&nbsp;2|Week&nbsp;3|Week&nbsp;4|Week&nbsp;5┃OriconLTD(DIP)┃Pub.&nbsp;Date&nbsp;|Title
-<br>*1|*39461(4)|******|******|104136|126037┃*,271,265(*81)┃2019/07/04|SPY×FAMILY　1
+<br>*1|*39461(4)|******|******|104136|126037┃*,285,195(*88)┃2019/07/04|SPY×FAMILY　1
 <br>*2|*48098(3)|*91617|110893|------|------┃*,110,893(*17)┃2019/08/02|World's&nbsp;End&nbsp;Harem&nbsp;9
 <br>*3|*52663(5)|*74635|------|------|------┃*,*74,635(*12)┃2019/09/04|Jigokuraku 7
 <br>*4|*33601(4)|*53438|------|------|------┃*,*53,438(*11)┃2019/07/04|Hana&nbsp;Nochi&nbsp;Hare～Boys&nbsp;Over&nbsp;Flowers&nbsp;Next&nbsp;Season～&nbsp;13
