--- a/TOC/oricon/index.html
+++ b/TOC/oricon/index.html
@@ -93,31 +93,38 @@
 <p></p>
 <span>
 **|Week&nbsp;1&nbsp;(F)|Week&nbsp;2&nbsp;|Week&nbsp;3&nbsp;|Week&nbsp;4&nbsp;|Week&nbsp;5&nbsp;┃OriconLTD(DIP)┃Pub.&nbsp;Date&nbsp;|Title
-<br>*1|1378177(4)|1716100|1855702|1923919|1966556┃2,132,230(*88)┃2019/07/04|One&nbsp;Piece&nbsp;93
+<br>*1|1378177(4)|1716100|1855702|1923919|1966556┃2,148,343(*95)┃2019/07/04|One&nbsp;Piece&nbsp;93
 <br>*2|*498226(4)|*709028|*793638|*838642|*863207┃*,984,493(228)┃2018/10/04|Hunter&nbsp;x&nbsp;Hunter&nbsp;36
-<br>*3|*190803(3)|*399399|*497864|*544803|*570463┃*,622,932(*59)┃2019/08/02|The&nbsp;Promised&nbsp;Neverland&nbsp;15
-<br>*4|*225102(4)|*302423|*337978|*357346|*384400┃*,600,688(*88)┃2019/07/04|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;16
+<br>*3|*225102(4)|*302423|*337978|*357346|*384400┃*,651,875(*95)┃2019/07/04|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;16
+<br>*4|*190803(3)|*399399|*497864|*544803|*570463┃*,634,240(*66)┃2019/08/02|The&nbsp;Promised&nbsp;Neverland&nbsp;15
 <br>*5|*201910(3)|*406721|*496745|*538784|*561135┃*,573,043(*38)┃2019/08/02|My&nbsp;Hero&nbsp;Academia&nbsp;24
-<br>*6|*325332(6)|*418233|*461080|*485385|*498294┃*,537,297(*76)┃2019/06/04|Haikyuu&#33;&#33;&nbsp;38
+<br>*6|*260748(5)|*356785|*408394|*440330|*456289┃*,456,289(*33)┃2019/09/04|Haikyuu&#33;&#33;&nbsp;39
 <br>*7|*120146(4)|*173597|*195982|*206343|*213502┃*,224,981(*46)┃2019/07/04|Black&nbsp;Clover&nbsp;21
-<br>*8|**98500(4)|*136161|*152250|*162156|*169575┃*,181,712(*46)┃2019/07/04|Jujutsu&nbsp;Kaisen&nbsp;6
-<br>*9|**76366(6)|**99474|*110940|*117998|-------┃*,117,998(*27)┃2019/06/04|We&nbsp;Never&nbsp;Learn&nbsp;12
-<br>10|**61834(4)|**89891|*102933|*******|*117666┃*,117,666(*32)┃2019/07/04|Act-Age&nbsp;7
-<br>11|**56414(4)|**81274|**92654|*******|*106828┃*,106,828(*32)┃2019/07/04|Dr&#46;&nbsp;Stone&nbsp;11
-<br>12|**29611(3)|**55608|**65124|-------|-------┃*,*65,124(*17)┃2019/08/02|Yuragi-sou&nbsp;no&nbsp;Yuuna-san&nbsp;17
-<br>13|**25075(3)|**50952|**61532|-------|-------┃*,*61,532(*17)┃2019/08/02|Chainsaw&nbsp;Man&nbsp;3
+<br>*8|*113823(6)|*151028|*170148|*178355|-------┃*,198,915(*76)┃2019/06/04|Shokugeki&nbsp;no&nbsp;Souma&nbsp;35
+<br>*9|*101826(6)|*137190|*152951|*164005|-------┃*,190,825(*76)┃2019/06/04|Boruto&nbsp;8
+<br>10|**98500(4)|*136161|*152250|*162156|*169575┃*,181,712(*46)┃2019/07/04|Jujutsu&nbsp;Kaisen&nbsp;6
+<br>11|**68740(5)|**93266|*108006|*117598|-------┃*,117,598(*26)┃2019/09/04|Dr&#46;Stone&nbsp;12
+<br>12|**66245(5)|**92650|*107030|*116359|-------┃*,116,359(*26)┃2019/09/04|Act-Age&nbsp;8
+<br>13|**70467(5)|**93975|*107952|*115604|-------┃*,115,604(*26)┃2019/09/04|We&nbsp;Never&nbsp;Learn&nbsp;13
+<br>14|**29611(3)|**55608|**65124|-------|-------┃*,*65,124(*17)┃2019/08/02|Yuragi-sou&nbsp;no&nbsp;Yuuna-san&nbsp;17
+<br>15|**25075(3)|**50952|**61532|-------|-------┃*,*61,532(*17)┃2019/08/02|Chainsaw&nbsp;Man&nbsp;3
 </span>
 <p>
 	-
 </p>
-<strong id="current" style="padding-top:50px"> Current Volumes Data (September 2019)</strong>
+<strong id="current" style="padding-top:50px"> Current Volumes Data (OCtober 2019)</strong>
 <p></p>		  
 <span>
 **|Week&nbsp;1&nbsp;(F)|Week&nbsp;2&nbsp;|Week&nbsp;3&nbsp;|Week&nbsp;4&nbsp;|Week&nbsp;5&nbsp;┃OriconLTD(DIP)┃Pub.&nbsp;Date&nbsp;|Title	
-<br>*1|*260748(5)|*356785|*408394|*440330|-------┃*,440,330(*26)┃2019/09/04|Haikyuu&#33;&#33;&nbsp;39
-<br>*2|**68740(5)|**93266|*108006|*117598|-------┃*,117,598(*26)┃2019/09/04|Dr&#46;Stone&nbsp;12
-<br>*3|**66245(5)|**92650|*107030|*116359|-------┃*,116,359(*26)┃2019/09/04|Act-Age&nbsp;8
-<br>*4|**70467(5)|**93975|*107952|*115604|-------┃*,115,604(*26)┃2019/09/04|We&nbsp;Never&nbsp;Learn&nbsp;13
+<br>*1|1182323(3)|-------|-------|-------|-------┃1,182,323(**3)┃2019/10/04|One&nbsp;Piece&nbsp;94
+<br>*2|*368502(3)|-------|-------|-------|-------┃*,368,502(**3)┃2019/10/04|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;17
+<br>*3|*218380(3)|-------|-------|-------|-------┃*,218,380(**3)┃2019/10/04|The&nbsp;Promised&nbsp;Neverland&nbsp;16
+<br>*4|**91290(3)|-------|-------|-------|-------┃*,*91,290(**3)┃2019/10/04|Shokugeki&nbsp;no&nbsp;Souma&nbsp;36
+<br>*5|**89103(3)|-------|-------|-------|-------┃*,*89,103(**3)┃2019/10/04|Black&nbsp;Clover&nbsp;22
+<br>*6|**88157(3)|-------|-------|-------|-------┃*,*88,157(**3)┃2019/10/04|Jujutsu&nbsp;Kaisen&nbsp;7
+<br>*7|**65934(3)|-------|-------|-------|-------┃*,*65,934(**3)┃2019/10/04|Boruto&nbsp;9
+<br>*8|**37276(3)|-------|-------|-------|-------┃*,*37,276(**3)┃2019/10/04|Chainsaw&nbsp;Man&nbsp;4
+<br>*9|**30387(3)|-------|-------|-------|-------┃*,*30,387(**3)┃2019/10/04|Yuragi-sou&nbsp;no&nbsp;Yuuna-san&nbsp;18
 <br>
 <br>	
 <br>[Not Ranked]
