--- a/TOC/oricon/index.html
+++ b/TOC/oricon/index.html
@@ -108,6 +108,7 @@
 <br>13|**70467(5)|**93975|*107952|*115604|-------┃*,115,604(*26)┃2019/09/04|We&nbsp;Never&nbsp;Learn&nbsp;13
 <br>14|**29611(3)|**55608|**65124|-------|-------┃*,*65,124(*17)┃2019/08/02|Yuragi-sou&nbsp;no&nbsp;Yuuna-san&nbsp;17
 <br>15|**25075(3)|**50952|**61532|-------|-------┃*,*61,532(*17)┃2019/08/02|Chainsaw&nbsp;Man&nbsp;3
+<br>16|**19775(4)|-------|-------|-------|-------┃*,*19,775(**4)┃2019/07/04|Hinomaru&nbsp;Sumo&nbsp;26	
 </span>
 <p>
 	-
@@ -125,6 +126,9 @@
 <br>*7|**65934(3)|-------|-------|-------|-------┃*,*65,934(**3)┃2019/10/04|Boruto&nbsp;9
 <br>*8|**37276(3)|-------|-------|-------|-------┃*,*37,276(**3)┃2019/10/04|Chainsaw&nbsp;Man&nbsp;4
 <br>*9|**30387(3)|-------|-------|-------|-------┃*,*30,387(**3)┃2019/10/04|Yuragi-sou&nbsp;no&nbsp;Yuuna-san&nbsp;18
+<br>10|**15949(3)|-------|-------|-------|-------┃*,*15,949(**3)┃2019/10/04|Hinomaru&nbsp;Sumo&nbsp;27
+<br>11|**12728(3)|-------|-------|-------|-------┃*,*12,728(**3)┃2019/10/04|Samurai&nbsp;8&nbsp;1
+<br>12|**11436(3)|-------|-------|-------|-------┃*,*11,436(**3)┃2019/10/04|Samurai&nbsp;8&nbsp;2
 <br>
 <br>	
 <br>[Not Ranked]
