--- a/TOC/oricon/index.html
+++ b/TOC/oricon/index.html
@@ -185,9 +185,8 @@
 <br>|1514459(6)|1801917|1914363|1993806|2051518┃2,280,644(167)┃2018/12/04|One&nbsp;Piece&nbsp;91
 <br>|*231555(0)|1386360|1604070|1710034|1776868┃2,039,350(168)┃2019/03/04|One&nbsp;Piece&nbsp;92
 <br>|1378177(4)|1716100|1855702|1923919|1966556┃2,132,230(*88)┃2019/07/04|One&nbsp;Piece&nbsp;93
-<br>
 </span>
-		  <p style="border-bottom: 1px solid black;"></p>
+		  <p style="border-bottom: 1px solid black;margin-top:50px"></p>
 <strong id="hxh" style="padding-top:50px">Hunter x Hunter</strong>
 <p></p>
 <span>
@@ -205,8 +204,7 @@
 <br>|*477485(3)|*728167|*819134|*865164|*895639┃1,090,958(290)┃2018/02/02|Hunter&nbsp;x&nbsp;Hunter&nbsp;35
 <br>|*498226(4)|*709028|*793638|*838642|*863207┃*,984,493(228)┃2018/10/04|Hunter&nbsp;x&nbsp;Hunter&nbsp;36
 </span>
-<br>	
-		  <p style="border-bottom: 1px solid black;"></p>
+		  <p style="border-bottom: 1px solid black;margin-top:50px"></p>
 <strong id="hq" style="padding-top:50px">Haikyuu&#33;&#33;</strong>
 <p></p>
 <span>
@@ -256,10 +254,8 @@
 <br>|*23023(7)|*62773|------|------|------┃*,*62,773(**7)┃2016/05/02|Haikyuu&#33;&#33;&nbsp;21&nbsp;LE
 <br>|*20264(3)|------|------|------|------┃*,*20,264(**3)┃2017/08/04|Haikyuu&#33;&#33;&nbsp;27&nbsp;LE
 <br>|*77828(2)|121727|------|------|------┃*,121,727(**9)┃2015/10/03|Haikyuu&#33;&#33;&nbsp;Complete&nbsp;Guide
-
 </span>
-<br>
-		 <p style="border-bottom: 1px solid black;"></p>
+		 <p style="border-bottom: 1px solid black;margin-top:50px"></p>
 <strong id="mha" style="padding-top:50px">My Hero Academia</strong>
 <p></p>
 <span>
@@ -294,8 +290,7 @@
 <br>|******(3)|------|------|------|------┃*,***,***(***3)┃2017/06/02|My&nbsp;Hero&nbsp;Academia&nbsp;14&nbsp;LE&nbsp;&lt;12,243
 <br>|*34637(7)|------|------|------|------┃*,*34,637(***7)┃2016/05/02|My&nbsp;Hero&nbsp;Academia&nbsp;Official&nbsp;Character&nbsp;Book:&nbsp;Ultra&nbsp;Archive
 </span>	
-<br>
-		 <p style="border-bottom: 1px solid black;"></p>
+		 <p style="border-bottom: 1px solid black;margin-top:50px"></p>
 <strong id="bc" style="padding-top:50px">Black Clover</strong>
 <p></p>
 <span>
@@ -325,8 +320,7 @@
 <br>|******(6)|------|------|------|------┃*,***,***(**6)┃2017/05/02|Black&nbsp;Clover&nbsp;11&nbsp;LE&nbsp;&lt;15,808
 <br>|*21239(5)|------|------|------|------┃*,*21,239(**5)┃2018/05/02|Black&nbsp;Clover&nbsp;16.5&nbsp;Official&nbsp;Guidebook&nbsp;Marque-page&nbsp;de&nbsp;Grimoire&nbsp;
 </span>		  		  
-<br>
-<p style="border-bottom: 1px solid black;"></p>
+	<p style="border-bottom: 1px solid black;margin-top:50px"></p>
 <strong id="yuuna" style="padding-top:50px">Yuragi-sou no Yuuna-san</strong>
 <p></p>
 <span>
@@ -353,8 +347,7 @@
 <br>|******(4)|------|------|------|------┃*,***,***(**4)┃2018/10/04|Yuuna&nbsp;and&nbsp;the&nbsp;Haunted&nbsp;Hotsprings&nbsp;12&nbsp;LE&nbsp;&lt;11,701
 <br>|******(6)|------|------|------|------┃*,***,***(**6)┃2018/12/04|Yuuna&nbsp;and&nbsp;the&nbsp;Haunted&nbsp;Hotsprings&nbsp;13&nbsp;LE&nbsp;&lt;17,070
 </span>		
-<br>
-		  <p style="border-bottom: 1px solid black;"></p>
+		  <p style="border-bottom: 1px solid black;margin-top:50px"></p>
 <strong id="kny" style="padding-top:50px">Kimetsu no Yaiba</strong>
 <p></p>
 <span>
@@ -378,8 +371,7 @@
 <br>
 <br>|*51963(4)|******|******|******|119215┃*,233,572(**81)┃2019/07/04|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;Official&nbsp;Fanbook&nbsp;Demon&nbsp;Corps&nbsp;Records
 </span>	
-<br>
-		   <p style="border-bottom: 1px solid black;"></p>
+		   <p style="border-bottom: 1px solid black;margin-top:50px"></p>
 <strong id="tpn" style="padding-top:50px">The Promised Neverland</strong>
 <p></p>
 <span>
@@ -402,8 +394,7 @@
 <br>
 <br>|*62333(7)|*73501|******|*89326|------┃*,114,139(*77)┃2019/03/04|The&nbsp;Promised&nbsp;Neverland&nbsp;13&nbsp;LE
 </span>	
-<br>
-		 <p style="border-bottom: 1px solid black;"></p>
+		 <p style="border-bottom: 1px solid black;margin-top:50px"></p>
 <strong id="wnl" style="padding-top:50px">We Never Learn</strong>
 <p></p>
 <span>
@@ -422,8 +413,7 @@
 <br>|*76366(6)|*99474|110940|117998|------┃*,117,998(*27)┃2019/06/04|We&nbsp;Never&nbsp;Learn&nbsp;12
 <br>|*70467(5)|*93975|107952|115604|------┃*,115,604(*26)┃2019/09/04|We&nbsp;Never&nbsp;Learn&nbsp;13
 </span>	
-<br>
-		  <p style="border-bottom: 1px solid black;"></p>
+		  <p style="border-bottom: 1px solid black;margin-top:50px"></p>
 <strong id="ds" style="padding-top:50px">Dr.Stone</strong>
 <p></p>
 <span>
@@ -441,8 +431,7 @@
 <br>|*56414(4)|*81274|*92654|******|106828┃*,106,828(*32)┃2019/07/04|Dr&#46;Stone&nbsp;11
 <br>|*68740(5)|*93266|108006|117598|------┃*,117,598(*26)┃2019/09/04|Dr&#46;Stone&nbsp;12
 </span>	
-<br>
-		 <p style="border-bottom: 1px solid black;"></p>
+		 <p style="border-bottom: 1px solid black;margin-top:50px"></p>
 <strong id="aa" style="padding-top:50px">Act-Age</strong>
 <p></p>
 <span>
@@ -456,8 +445,7 @@
 <br>|*61834(4)|*89891|102933|******|117666┃*,117,666(*32)┃2019/07/04|Act&#8211;Age&nbsp;7
 <br>|*66245(5)|*92650|107030|116359|------┃*,116,359(*26)┃2019/09/04|Act&#8211;Age&nbsp;8
 </span>	
-<br>
-		  <p style="border-bottom: 1px solid black;"></p>
+		  <p style="border-bottom: 1px solid black;margin-top:50px"></p>
 <strong id="jjk" style="padding-top:50px">Jujutsu Kaisen</strong>
 <p></p>
 <span>
@@ -471,8 +459,7 @@
 <br>
 <br>|*70774(6)|------|------|------|------┃*,177,868(167)┃2018/12/04|Jujutsu&nbsp;Kaisen&nbsp;0&nbsp;Tokyo&nbsp;Metropolitan&nbsp;Magic&nbsp;Technical&nbsp;School
 </span>	
-<br>
-		  <p style="border-bottom: 1px solid black;"></p>
+		  <p style="border-bottom: 1px solid black;margin-top:50px"></p>
 <strong id="csm" style="padding-top:50px">Chainsaw Man</strong>
 <p></p>
 <span>
@@ -516,8 +503,7 @@
 <br>|*20238(6)|------|------|------|------┃*,*20,238(**6)┃2018/09/04|Blue&nbsp;Flag&nbsp;5
 <br>|*17280(4)|------|------|------|------┃*,*17,280(**4)┃2019/04/04|Blue&nbsp;Flag&nbsp;6
 </span>			  
-<br>
-		  <p style="border-bottom: 1px solid black;"></p>
+		  <p style="border-bottom: 1px solid black;margin-top:50px"></p>
 <strong id="ditf" style="padding-top:50px">Darling in the Franxx</strong>
 <p></p>
 <span>
@@ -529,8 +515,7 @@
 <br>|*34434(4)|*55801|------|------|------┃*,*55,801(*11)┃2019/05/02|Darling&nbsp;in&nbsp;the&nbsp;Franxx&nbsp;5
 <br>|*33650(5)|------|------|------|------┃*,*33,650(**5)┃2019/09/04|Darling&nbsp;in&nbsp;the&nbsp;Franxx&nbsp;6
 </span>		
-<br>
-		  <p style="border-bottom: 1px solid black;"></p>
+		  <p style="border-bottom: 1px solid black;margin-top:50px"></p>
 <strong id="jigo" style="padding-top:50px">Jigokuraku</strong>
 <p></p>
 <span>
@@ -543,8 +528,7 @@
 <br>|*48014(6)|*70651|------|------|------┃*,*70,651(*13)┃2019/06/04|Jigokuraku&nbsp;6
 <br>|*52663(5)|*74635|------|------|------┃*,*74,635(*12)┃2019/09/04|Jigokuraku&nbsp;7
 </span>				  
-<br>
-		  <p style="border-bottom: 1px solid black;"></p>
+		  <p style="border-bottom: 1px solid black;margin-top:50px"></p>
 <strong id="hananochi" style="padding-top:50px">Hana&nbsp;Nochi&nbsp;Hare～Boys&nbsp;Over&nbsp;Flowers&nbsp;Next&nbsp;Season～</strong>
 <p></p>
 <span>
@@ -562,8 +546,7 @@
 <br>|*61129(6)|*86185|------|------|------┃*,*86,185(*13)┃2018/12/04|Hana&nbsp;Nochi&nbsp;Hare～Boys&nbsp;Over&nbsp;Flowers&nbsp;Next&nbsp;Season～&nbsp;11
 <br>|*45345(4)|*74646|------|------|------┃*,*74,646(*11)┃2019/04/04|Hana&nbsp;Nochi&nbsp;Hare～Boys&nbsp;Over&nbsp;Flowers&nbsp;Next&nbsp;Season～&nbsp;12
 </span>				  
-<br>
-		  <p style="border-bottom: 1px solid black;"></p>
+		  <p style="border-bottom: 1px solid black;margin-top:50px"></p>
 <strong id="letoile" style="padding-top:50px">Shokugeki&nbsp;no&nbsp;Soma:&nbsp;L'étoile</strong>
 <p></p>
 <span>
@@ -576,8 +559,7 @@
 <br>|*19781(5)|------|------|------|------┃*,*19,781(**5)┃2018/05/02|Shokugeki&nbsp;no&nbsp;Soma:&nbsp;L'étoile&nbsp;6
 <br>|*17118(7)|------|------|------|------┃*,*17,118(**7)┃2019/02/04|Shokugeki&nbsp;no&nbsp;Soma:&nbsp;L'étoile&nbsp;7
 </span>				  
-<br>
-		  <p style="border-bottom: 1px solid black;"></p>
+		  <p style="border-bottom: 1px solid black;margin-top:50px"></p>
 <strong id="weh" style="padding-top:50px">World's End Harem</strong>
 <p></p>
 <span>
@@ -594,8 +576,7 @@
 <br>|*34282(3)|*54085|------|------|------┃*,*54,085(*10)┃2018/11/02|World's&nbsp;End&nbsp;Harem&nbsp;Fantasia&nbsp;1
 <br>|*50807(7)|------|------|------|------┃*,*50,807(**7)┃2019/03/04|World's&nbsp;End&nbsp;Harem&nbsp;Fantasia&nbsp;2	
 </span>				  
-<br>
-		  <p style="border-bottom: 1px solid black;"></p>
+		  <p style="border-bottom: 1px solid black;margin-top:50px"></p>
 <strong id="vigilante" style="padding-top:50px">VIGILANTE My Hero Academia ILLEGALS</strong>
 <p></p>
 <span>
