--- a/TOC/oricon/index.html
+++ b/TOC/oricon/index.html
@@ -51,8 +51,9 @@
       <i class="fa fa-caret-down"></i>
 	    </button>
     <div class="dropdown-content"id="myDropdown3" >
+      <p style="background:none">Weekly Shonen Jump</p>
       <a href="#latest" >&gt;&gt; Latest Volume Data</a>
-      <p style="background:none"> Ongoing series </p>
+      <p style="background:none; font-size:.9em;"> Ongoing series </p>
       <a href="#op" >&gt;&gt; One Piece</a>
       <a href="#hxh" >&gt;&gt; Hunter x Hunter</a>
       <a href="#hq" >&gt;&gt; Haikyuu&#33;&#33;</a>
@@ -68,6 +69,7 @@
       <a href="#csm" >&gt;&gt; Chainsaw Man</a>
       <p style="background:none">Jump&#43;</p>
 <a href="#plus" >&gt;&gt; Latest Volume Data</a>
+<p style="background:none; font-size:.9em;"> Ongoing series </p>	    
 <a href="#aoflag" >&gt;&gt; Blue Flag</a>
 <a href="#ditf" >&gt;&gt; Darling in the Franxx</a>
 <a href="#jigo" >&gt;&gt; Jigokuraku</a>
@@ -614,9 +616,10 @@
 
 <div class="bookmark">
 <h1 >Navigation</h1>
-<div class="quick">	
+<div class="quick">
+<p>Weekly Shonen Jump</p>	
 <a href="#latest" >&gt;&gt; Latest Volume Data</a>
-<p> Ongoing series </p>
+<p style="font-size:.9em;"> Ongoing series </p>
 <a href="#op" >&gt;&gt; One Piece</a>
 <a href="#hxh" >&gt;&gt; Hunter x Hunter</a>
 <a href="#hq" >&gt;&gt; Haikyuu&#33;&#33;</a>
@@ -632,6 +635,7 @@
 <a href="#csm" >&gt;&gt; Chainsaw Man</a>
 <p>Jump&#43;</p>
 <a href="#plus" >&gt;&gt; Latest Volume Data</a>
+<p style="font-size:.9em;">	
 <a href="#aoflag" >&gt;&gt; Blue Flag</a>
 <a href="#ditf" >&gt;&gt; Darling in the Franxx</a>
 <a href="#jigo" >&gt;&gt; Jigokuraku</a>
