--- a/TOC/oricon/index.html
+++ b/TOC/oricon/index.html
@@ -53,7 +53,7 @@
     <div class="dropdown-content"id="myDropdown3" >
       <p style="background:none">Weekly Shonen Jump</p>
       <a href="#latest" >&gt;&gt; Latest Volume Data</a>
-      <p style="background:none; font-size:.9rem;"> Ongoing series </p>
+      <p style="background:none; font-size:.7em;"> Ongoing series </p>
       <a href="#op" >&gt;&gt; One Piece</a>
       <a href="#hxh" >&gt;&gt; Hunter x Hunter</a>
       <a href="#hq" >&gt;&gt; Haikyuu&#33;&#33;</a>
@@ -69,7 +69,7 @@
       <a href="#csm" >&gt;&gt; Chainsaw Man</a>
       <p style="background:none">Jump&#43;</p>
 <a href="#plus" >&gt;&gt; Latest Volume Data</a>
-<p style="background:none; font-size:.9rem;"> Ongoing series </p>	    
+<p style="background:none; font-size:.7em;"> Ongoing series </p>	    
 <a href="#aoflag" >&gt;&gt; Blue Flag</a>
 <a href="#ditf" >&gt;&gt; Darling in the Franxx</a>
 <a href="#jigo" >&gt;&gt; Jigokuraku</a>
@@ -617,7 +617,7 @@
 <div class="bookmark">
 <h1 >Navigation</h1>
 <div class="quick">
-<p>Weekly Shonen Jump</p>	
+<strong>Weekly Shonen Jump</strong>	
 <a href="#latest" >&gt;&gt; Latest Volume Data</a>
 <p style="font-size:.9em;"> Ongoing series </p>
 <a href="#op" >&gt;&gt; One Piece</a>
@@ -633,7 +633,7 @@
 <a href="#aa" >&gt;&gt; Act-Age</a>
 <a href="#jjk" >&gt;&gt; Jujutsu Kaisen</a>
 <a href="#csm" >&gt;&gt; Chainsaw Man</a>
-<p>Jump&#43;</p>
+<strong>Jump&#43;</strong>
 <a href="#plus" >&gt;&gt; Latest Volume Data</a>
 <p style="font-size:.9em;"> Ongoing series </p>	
 <a href="#aoflag" >&gt;&gt; Blue Flag</a>
