--- a/TOC/oricon/index.html
+++ b/TOC/oricon/index.html
@@ -617,7 +617,7 @@
 <div class="bookmark">
 <h1 >Navigation</h1>
 <div class="quick">
-<b>Weekly Shonen Jump</b>	
+<p>Weekly Shonen Jump</p>	
 <a href="#latest" >&gt;&gt; Latest Volume Data</a>
 <p style="font-size:.9em;"> Ongoing series </p>
 <a href="#op" >&gt;&gt; One Piece</a>
@@ -633,7 +633,7 @@
 <a href="#aa" >&gt;&gt; Act-Age</a>
 <a href="#jjk" >&gt;&gt; Jujutsu Kaisen</a>
 <a href="#csm" >&gt;&gt; Chainsaw Man</a>
-<b>Jump&#43;</b>
+<p>Jump&#43;</p>
 <a href="#plus" >&gt;&gt; Latest Volume Data</a>
 <p style="font-size:.9em;"> Ongoing series </p>	
 <a href="#aoflag" >&gt;&gt; Blue Flag</a>
