--- a/TOC/oricon/index.html
+++ b/TOC/oricon/index.html
@@ -17,7 +17,7 @@
 	<meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=yes">
 <meta property="og:title" content="Weekly Shonen Jump Oricon">
 <meta property="og:description" content="Archive of Shonen Jump Oricon data">
-<meta property="og:image" content="https://manganimy.github.io/TOC/orcion/img/top.png">
+<meta property="og:image" content="https://manganimy.github.io/TOC/oricon/img/top.jpg">
 <meta property="og:url" content="https://manganimy.github.io/TOC/oricon">
 <meta name="twitter:card" content="summary_large_image">	
 <link rel="stylesheet" type="text/css" href="oricon.css">
